--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,7 @@
       "type": "image/png",
       "sizes": "512x512"
     }
-  ]
+  ],
+  "start_url": "https://svankamamidi.github.io/open-aac/"
+  "display": "fullscreen"
 }
