--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,6 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "https://svankamamidi.github.io/open-aac/"
+  "start_url": "https://svankamamidi.github.io/open-aac/",
   "display": "fullscreen"
 }
